--- a/style.css
+++ b/style.css
@@ -29,6 +29,21 @@ section {
   margin: 0 auto;
 }
 
+.header-container {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    138deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(199, 236, 255, 1) 100%
+  );
+  position: absolute;
+  padding: 22em;
+  top: 0;
+  z-index: -1;
+  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
 .logo {
   display: block;
   margin: 2em auto;
@@ -50,14 +65,27 @@ section {
   color: var(--clr-gray-800);
 }
 
+input[type="radio"] {
+  width: 25px;
+  height: 25px;
+}
+
 .radio-btns {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.radio {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  margin-right: 2em;
+  gap: 1em;
 }
 
 .container {
-  border: 1px solid gray;
+  background-color: #fff;
   border-radius: 10px;
   margin: 3em 1em;
   padding: 0.5em 1.5em;
@@ -163,4 +191,9 @@ section {
 
 .card-container h4 {
   font-size: var(--fs-heading-s);
+}
+
+.row {
+  display: flex;
+  gap: 1em;
 }
