--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ section {
   border-bottom-right-radius: 50px;
 }
 
+
 .logo {
   display: block;
   margin: 2em auto;
@@ -93,6 +94,14 @@ input[type="radio"] {
 
 .container h2 {
   font-size: var(--fs-heading-m);
+}
+
+#imperial-view {
+  display: none;
+}
+
+#metric-view {
+  display: block;
 }
 
 .height,
