--- a/style.css
+++ b/style.css
@@ -145,13 +145,15 @@ input[type="text"] {
   margin: 0;
 }
 
-#BMI-result h2 {
-  font-size: var(--fs-heading-l);
+#bmi-score {
+  font-size: var(--fs-heading-m);
+  font-weight: bold;
   margin-top: 0;
 }
 
 /* Main */
-.main-container {
+.main-container,
+.wrapper {
   margin: 0 1em;
 }
 
@@ -160,7 +162,7 @@ input[type="text"] {
 }
 
 .main__title {
-  margin: 1.5em 0;
+  margin: 1em 0;
   font-size: 2em;
 }
 
@@ -180,12 +182,16 @@ input[type="text"] {
 /* section */
 
 section {
-  margin: 6em 1em;
+  margin: 6em auto;
 }
 
 .section__title,
 .section__text {
   text-align: center;
+}
+
+.section__text {
+  margin-bottom: 3em;
 }
 
 .section__title {
@@ -196,7 +202,9 @@ section {
   border: 1px solid gray;
   border-radius: 10px;
   padding: 1em 1.5em;
-  margin-bottom: 1em;
+  max-width: 360px;
+  margin: 0.5em auto;
+  gap: 1em;
 }
 
 .card-container h4 {
@@ -206,4 +214,28 @@ section {
 .row {
   display: flex;
   gap: 1em;
+}
+
+@media screen and (min-width: 728px) {
+  #BMI-result {
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+  }
+
+  .col {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+  }
+
+  .image-man-eating {
+    width: 45%;
+    align-self: flex-end;
+  }
+
+  .cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
