--- a/style.css
+++ b/style.css
@@ -191,6 +191,8 @@ section {
 
 .section__text {
   margin-bottom: 3em;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .section__title {
@@ -198,12 +200,13 @@ section {
 }
 
 .card-container {
-  border: 1px solid gray;
   border-radius: 10px;
   padding: 1em 1.5em;
   max-width: 360px;
   margin: 0.5em auto;
   gap: 1em;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .card-container h4 {
